@@ -417,12 +417,14 @@ include_once('include/page_header.php');
 
 // Host triggers
 			$triggers = CTrigger::get(array('hostids' => $clone_hostid, 'not_templated_triggers' => 1));
+			$triggers = zbx_objectValues($triggers, 'triggerid');
 			foreach($triggers as $trigger){
 				$result &= copy_trigger_to_host($trigger, $hostid, true);
 			}
 
 // Host graphs
 			$graphs = CGraph::get(array('hostids' => $clone_hostid, 'not_templated_graphs' => 1));
+			$graphs = zbx_objectValues($graphs, 'graphid');
 			foreach($graphs as $graph){
 				$result &= copy_graph_to_host($graph, $hostid, true);
 			}
